--- a/src/app/modules/decks/decks.component.html
+++ b/src/app/modules/decks/decks.component.html
@@ -82,7 +82,7 @@
           @if ((decks$ | async)!; as decks) {
           @for (deck of decks; track deck) {
           <div class="col-12 px-2">
-            <app-deck-card [deck]="deck" (tagClick)="onTagClick($event)" />
+            <app-deck-card [deck]="deck" [enablePreview]="true" (tagClick)="onTagClick($event)" />
           </div>
           }
           @if (!(isLoading$ | async)! && decks.length === 0) {
