fix: update query parameters in deck link to use 'username' instead of 'author'

--- a/src/app/modules/user/user-public-profile/user-public-profile.component.html
+++ b/src/app/modules/user/user-public-profile/user-public-profile.component.html
@@ -113,8 +113,7 @@
           @if ((total$ | async) && (total$ | async)! > 6) {
           <div class="text-center">
             <a [routerLink]="'/decks'" [queryParams]="{
-              author: username(),
-              exactAuthor: true,
+              username: username(),
               type: 'COMMUNITY',
               order: 'POPULAR'
        }" class="btn btn-primary">
